# dicombuilder

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
dicombuilder/: dicttable.py  utils.py
examples/: example.py
