# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicombuilder"
version = "1.0.0"
description = "DICOM file builder"
readme = "README.md"
authors = [{ name = "", email = "" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dicom", "dcom", "dicom-builder"]
dependencies = [
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/voidz0r/dicom-builder"

[project.scripts]

